# request_logger

./: .gitignore  CONTRIBUTING.md  Manifest.in  README.md  pyproject.toml
examples/: example1.py
request_logger/: __init__.py  replayer.py  request_logger.py
request_logger/core/: metadata_store.py  replayer.py  request_logger.py  util.py
request_logger/core/storage/: __init__.py  base.py  file.py  mixins.py  postgres.py  s3.py
request_logger/storage/: __init__.py  base.py  file.py  postgres.py  s3.py
request_logger/web/: app.py
request_logger/web/templates/: base.html  index.html  modify_form.html  request_detail.html
tests/core/: request_logger.py
